--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
@@ -10,5 +9,5 @@
     }
   },
   "include": ["src/**/*", "vite.config.ts", "env.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "../tsconfig.node.json" }]
 }
