--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "chatkit-wrapper-vue": "file:..",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
